# cpp_course_task_2

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: my_sorts.h
src/: edu_sorts.c  my_sorts.c
test/: CMakeLists.txt  main.c
